# adventure

./: .gitignore  Makefile  README.md  meson.build
src/: Game.c  Game.h  Map.c  Map.h  Player.c  Player.h  advent.c  advent.h  advent_test.c  dice.c  dice.h  dungeon.c  dungeon.h  game_test.c  inventory.c  inventory.h  main.c  meson.build  player.c  player.h  testing.h
src/adapters/: console.c
src/engine/: player.c  player.h
subprojects/: yaml.wrap
test/: TestGame.c  TestMap.c  TestPlayer.c  meson.build  test_dice.c  test_dungeon.c  test_inventory.c  test_player.c
tests/: console_test.c  en-story.yaml  player_test.c  testing.h
